# comfyTUI

./: Cargo.toml  README.md  apply_theme.py  comfytui.example.toml  comfywise.example.toml  fix_gpu.py  install.sh  main_original.rs  my_changes.patch  recover.py  recover2.py  recover3.py  uninstall.sh
src/: main.rs  main.rs.recovered
