[package]
name = "comfytui"
version = "0.2.0"
edition = "2024"
description = "A guarded ComfyUI launcher with live Linux/NVIDIA diagnostics"
license = "MIT"

[dependencies]
anyhow = "=1.0.102"
crossterm = "=0.29.0"
ratatui = "=0.30.2"
serde = { version = "=1.0.228", features = ["derive"] }
toml = "=1.1.2"
serde_json = "1.0"
